--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id "com.android.application"
     id "kotlin-android"
-    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
 
@@ -25,12 +24,16 @@ if (flutterVersionName == null) {
 
 android {
     namespace = "com.example.flutter_application"
-    compileSdk = flutter.compileSdkVersion
+    compileSdkVersion flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        // Fuerza el target de Kotlin a coincidir con el de Java (1.8)
+        jvmTarget = '1.8'
     }
 
     defaultConfig {
